templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: argussecex
spec:
  replicas: 3
  template:
    metadata:
	  labels:
	    app: argussecex
	spec:
	  containers:
	  - name: argussecex
	    image: argussecex:latest
		ports:
		- containerPort: 8080
