templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argussecex-service
spec:
  selector:
    app: argussecex
  ports:
    - name: main
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
