templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argussecex-ingress
  annotations:
    http.port: "80"
spec:
  backend:
    serviceName: argussecex-service
    servicePort: 8080
